@@ -712,7 +712,8 @@ STARTSTAT=0
 # from the global Item catalog. To give more than one of an item,
 # it should be prefixed with a number.  These are items given
 # to all new characters created.  To give no items, use ",".
-# Example: 13 Shield, 5 ShortSword
+# An Item list can be prefixed with a race to distinguish.
+# Example: 13 Shield, 5 ShortSword, Pixie, 1 Apple, 1 Waterskin
 # Default: 1 Ration, 1 Waterskin, 1 Torch
 STARTINGITEMS=1 Ration, 1 Waterskin, 1 Torch
 
