@@ -36,6 +36,7 @@
   34. Archons can now do CREATE MIXEDRACE raceid1 raceid2
   35. New common skill: Composting
   36. Builders can now use LIST GENSTATS <class or item> to view named generic stats. 
+  37. Universal Starting Items can now be distinguished by race.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
